kustomize-guestbook/kustomize-guestbook-ui-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: guestbook-ing
  namespace: testapp
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: selfsigned-issuer

spec:
  ingressClassName: traefik
  rules:
    - host: guest.80.158.49.239.sslip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  kustomize-guestbook-ui
                port:
                  number: 80

  tls:
    secretName: guest-cert
